Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/6359951/T6359951.out
T6359951.java:14:27: compiler.err.type.var.cant.be.deref
T6359951.java:15:44: compiler.err.type.var.cant.be.deref
T6359951.java:16:44: compiler.err.type.var.cant.be.deref
3 errors
